--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import-normalize;
+
+:root {
+  --color-background: #121212;
+  --color-white-100: #FFFFFF;
+  --color-white-094: rgba(255, 255, 255, 0.94);
+  --color-white-082: rgba(255, 255, 255, 0.82);
+  --color-gray: #E3E3E3;
+  --color-black: #000000;
+  --transition-linear: linear 0.2s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-background);
+}
+
+.wrapper {
+  width: 100%;
+  overflow: hidden;
+  padding: 0 8px 166px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 390px) {
+  .wrapper {
+    padding: 0 32px 166px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .wrapper {
+    padding: 39px 16px 166px;
+    max-width: 843px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .wrapper {
+    max-width: 1200px;
+  }
+}
+
+@media screen and (min-width: 1728px) {
+  .wrapper {
+    max-width: 1470px;
+  }
 }
