--- a/src/components/Company/CompanyLocation.styles.scss
+++ b/src/components/Company/CompanyLocation.styles.scss
@@ -15,6 +15,13 @@
     }
 
     &-text {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      
+      @include mediaIpadPro {
+        display: block;
+      }  
     }
   }
 
@@ -51,7 +58,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    margin-top: 253px;
+    margin-top: 103px;
     justify-content: space-between;
 
     @include mediaIpadPro {
@@ -66,6 +73,22 @@
 
     @include mediaMacbookProLarge {
       gap: 105px;
+    }
+  }
+
+  &__link {
+    @include text;
+    display: block;
+    color: var(--color-white-082);
+
+    margin-top: 36px;
+
+    @include mediaIpadPro {
+      margin-top: 37px;
+    }
+
+    @include mediaMacbookPro {
+      margin-top: 30px;
     }
   }
 }
