--- a/src/components/Menu/Menu.styles.scss
+++ b/src/components/Menu/Menu.styles.scss
@@ -6,9 +6,13 @@
   align-items: center;
   justify-content: space-between;
   padding: 6px 8px;
-  max-width: 324px;
+  max-width: 453px;
   margin: 19px auto 0;
   gap: 12px;
+  background: rgba(18, 18, 18, 0.84);
+  backdrop-filter: blur(10px);
+  border-radius: 25px;
+  height: 50px;
 
   @include mediaIpadPro {
     margin-left: auto;
