--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --color-gray: #E3E3E3;
   --color-black: #000000;
   --transition-linear: linear 0.2s;
+  --color-blue: #0057B7;
+  --color-yellow: #FFD700;
 }
 
 * {
