--- a/src/pages/Company/CompanyPage.styles.scss
+++ b/src/pages/Company/CompanyPage.styles.scss
@@ -26,10 +26,22 @@
       text-align: center;
     }
   }
+  &__heading {
+    @include title;
+    margin-bottom: 0;
+    margin-top: 103px;
+    
+    @include mediaIpadPro {
+      margin-top: 89px;
+    }
+    @include mediaMacbookPro {
+      margin-top: 163px;
+    }
+  }
 }
 
 .companyTeam {
-  margin-top: 200px;
+  margin-top: 103px;
   &__cardWrapper {
     margin-top: 24px;
     @include mediaIpadPro {
@@ -55,5 +67,37 @@
   }
   @include mediaMacbookProLarge {
     max-width: 418px;
+  }
+}
+
+.ukraineBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 143px;
+
+  @include mediaIpadPro {
+    margin-top: 127px;
+  }
+  @include mediaMacbookPro {
+    margin-top: 97px;
+  }
+
+  &__flag {
+    width: 50px;
+    height: 24px;
+  }
+  &__blue {
+    height: 12px;
+    background-color: var(--color-blue);
+  }
+  &__yellow {
+    height: 12px;
+    background-color: var(--color-yellow);
+  }
+  &__supportText {
+    @include text;
+    text-align: center;
+    margin-top: 33px;
   }
 }
