--- a/src/components/FullBanner/FullBanner.styles.scss
+++ b/src/components/FullBanner/FullBanner.styles.scss
@@ -6,15 +6,26 @@
   position: absolute;
   left: 0;
   max-height: 566px;
+
   @include mediaIpadPro {
     max-height: 573px;
   }
+
   img {
     width: 100%;
     height: 566px;
     object-fit: cover;
     @include mediaMacbookPro {
       height: 573px;
+    }
+  }
+
+  &_withMargin {
+    max-height: 767px;
+    margin-top: calc(-50px - 39px);
+
+    & img {
+      height: 767px;
     }
   }
 }
