--- a/src/components/CardTeam/CardTeam.styles.scss
+++ b/src/components/CardTeam/CardTeam.styles.scss
@@ -57,8 +57,8 @@
     object-fit: contain;
     margin-top: -18px;
     position: absolute;
-    right: -44px;
-    bottom: -49px;
+    right: 0;
+    bottom: 0;
   }
 
   &__education {
