--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--color-background);
+  background-color: var(--color-black);
 }
 
 .wrapper {
