--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -25,6 +25,10 @@
   @media screen and (min-width: 768px) { @content }
 }
 
+@mixin smallDesktop {
+  @media screen and (min-width: 1024px) { @content }
+}
+
 @mixin mediaMacbookPro {
   @media screen and (min-width: 1280px) { @content }
 }
