--- a/src/pages/Grants/GrantsPage.styles.scss
+++ b/src/pages/Grants/GrantsPage.styles.scss
@@ -34,14 +34,24 @@
   &__downImage {
     display: flex;
     justify-content: space-between;
+
+    & img {
+      width: 45%;
+    }
   }
   &__image {
     display: none;
 
-    @include mediaMacbookProLarge {
+    @include mediaMacbookPro {
       display: flex;
       flex-direction: column;
       row-gap: 38px;
+
+      & > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
   &__table {
