--- a/src/components/Logo/Logo.styles.scss
+++ b/src/components/Logo/Logo.styles.scss
@@ -10,8 +10,18 @@
 
   &-wrapper {
     display: flex;
-    position: relative;
-    top: 33px;
+    top: 80px;
+    position: absolute;
+    z-index: 10;
+    width: calc(100% - 42px);
+
+    @include mediaIpadPro {
+      top: 100px;
+    }
+
+    @include smallDesktop {
+      top: 115px;
+    }
   }
 
   &-noeon {
@@ -32,6 +42,7 @@
     line-height: 120%;
     position: absolute;
     left: 104px;
+    width: calc(100% - 104px);
 
     @include mediaIpadPro {
       font-size: 25px;
