research Steps fixed

--- a/src/components/Research/Research.styles.scss
+++ b/src/components/Research/Research.styles.scss
@@ -26,10 +26,10 @@
     gap: 104px;
     align-items: center;
 
-    @include mediaIpadPro {
+    @include smallDesktop {
       margin-top: 125px;
       flex-direction: row;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
       gap: 56px 0;
       justify-content: space-between;
       align-items: flex-start;
@@ -39,10 +39,50 @@
       justify-content: space-between;
       gap: 194px 0;
       align-items: flex-start;
+      max-width: 85%;
+      margin-left: auto;
+      margin-right: auto;
     }
     &__wrapper {
+      max-width: 276px;
+      position: relative;
+      &::after {
+        content: "";
+        width: 1px;
+        background-color: var(--color-white-100);
+        height: calc(100% - 42px - 55px);
+        position: absolute;
+        left: 50%;
+        top: calc(100% + 21px);
+        transform: translateX(-50%);
+
+        @include smallDesktop {
+          top: 25%;
+          transform: translateY(-50%);
+          left: calc(100% - 62px);
+          height: 1px;
+          width: calc(100% - 92px - 53px);
+        }
+
+        @include mediaMacbookPro {
+          width: calc(100% - 30px);
+          left: calc(100% - 76px);
+        }
+
+        @include mediaMacbookProLarge {
+          width: calc(100% + 50% - 62px);
+          left: calc(100% - 50% + 66px);
+        }
+      }
+      
+      &:last-child {
+        &::after {
+          display: none;
+        }
+      }
+      
       @include mediaIpadPro {
-        max-width: 30%;
+        width: 276px;
       }
     }
   }
