--- a/src/components/Step/Step.styles.scss
+++ b/src/components/Step/Step.styles.scss
@@ -50,7 +50,7 @@
     border: 3px solid var(--color-white-100);
     border-radius: 50%;
 
-    @include mediaIpadPro {
+    @include smallDesktop {
       width: 92px;
       height: 92px;
       font-size: 49.4937px;
