--- a/src/components/Company/CompanyLocation.styles.scss
+++ b/src/components/Company/CompanyLocation.styles.scss
@@ -10,6 +10,10 @@
       gap: 26px;
     }
 
+    @include smallDesktop {
+      gap: 56px;
+    }
+
     @include mediaMacbookPro {
       gap: 87px;
     }
@@ -17,7 +21,7 @@
     &-text {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
       
       @include mediaIpadPro {
         display: block;
@@ -27,7 +31,6 @@
 
   &__city {
     width: 100%;
-    border-radius: 27px;
 
     @include mediaIpadPro {
       max-width: 395px;
@@ -40,6 +43,7 @@
 
   &__title {
     @include title;
+    max-width: 486px;
     margin-top: 20px;
     margin-bottom: 12px;
 
@@ -78,10 +82,12 @@
 
   &__link {
     @include text;
-    display: block;
-    color: var(--color-white-082);
-
+    @include button-link;
     margin-top: 36px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @include mediaIpadPro {
       margin-top: 37px;
@@ -89,6 +95,7 @@
 
     @include mediaMacbookPro {
       margin-top: 30px;
+      max-width: 351px;
     }
   }
 }
